openshift/demos/ocp-argocd-ocp-virt/apps/mix-app/mix-app-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mix-app
  name: mix-app
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: mix-app
