openshift/demos/ocp-argocd-ocp-virt/apps/mix-app/mix-app-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: mix-app
  name: mix-app
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: mix-app
    weight: 100
